--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,37 @@
-altgraph==0.16.1
-apimatic-cli==2.5
-appdirs==1.4.3
-appnope==0.1.0
-attrs==19.3.0
-backports-abc==0.5
-backports.shutil-get-terminal-size==1.0.0
-blacktex==0.1.3
-bleach==3.1.0
-blessings==1.7
-CacheControl==0.12.5
-certifi==2019.6.16
-chardet==3.0.4
-Click==7.0
-colorama==0.4.1
-configparser==4.0.2
-contextlib2==0.6.0.post1
-decorator==4.4.1
-defusedxml==0.6.0
-dis3==0.1.3
-docutils==0.14
-entrypoints==0.3
-enum34==1.1.6
-Flask==1.1.1
-functools32==3.2.3.post2
-future==0.17.1
-futures==3.3.0
-idna==2.8
-importlib-metadata==1.1.0
-inquirer==2.6.3
-ipaddress==1.0.23
-ipykernel==4.10.1
-ipython==5.8.0
-ipython-genutils==0.2.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-jsonpickle==0.9.6
-jsonschema==3.2.0
-jupyter-client==5.3.4
-jupyter-core==4.6.1
-jupyterlab==0.33.12
-jupyterlab-launcher==0.11.2
-macholib==1.11
-MarkupSafe==1.1.1
-mistune==0.8.4
-more-itertools==5.0.0
-msgpack==0.6.1
-nbconvert==5.6.1
-nbformat==4.4.0
-notebook==5.7.8
-numpy==1.16.2
-pandocfilters==1.4.2
-pathlib2==2.3.5
-pefile==2019.4.18
-pexpect==4.7.0
-pickleshare==0.7.5
-pipdate==0.3.4
-prometheus-client==0.7.1
-prompt-toolkit==1.0.18
-ptyprocess==0.6.0
-pycairo==1.18.2
-Pygments==2.3.1
-PyInstaller==3.4
-pyrsistent==0.15.6
-python-dateutil==2.8.0
-python-editor==1.0.4
+algorithms==0.1.3
+asciinema==2.0.2
+astroid==2.3.3
+autopep8==1.5.2
+cycler==0.10.0
+decorator==4.4.2
+fitter==1.2.1
+GDAL==2.4.4
+hashpumpy==1.2
+isort==4.3.21
+joblib==0.15.1
+kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
+matplotlib==3.2.1
+mccabe==0.6.1
+networkx==2.4
+numpy==1.18.1
+pandas==1.0.3
+Pillow==7.1.2
+pprint==0.1
+protobuf==3.11.3
+pycodestyle==2.6.0
+pylint==2.4.4
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
 PyYAML==5.3.1
-pyzmq==18.1.1
-readchar==2.0.1
-requests==2.22.0
-scandir==1.10.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.12.0
-speedtest-cli==2.1.2
-stronghold==1.3
-subprocess32==3.5.4
-terminado==0.8.3
-Terminator==0.98
-testpath==0.4.4
-tornado==5.1.1
-traitlets==4.3.3
+scikit-learn==0.23.1
+scipy==1.4.1
+selenium==3.141.0
+six==1.14.0
+sklearn==0.0
+threadpoolctl==2.0.0
+tqdm==4.46.0
+typed-ast==1.4.1
 urllib3==1.25.3
-wakatime==13.0.3
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.16.0
-zipp==0.6.0
+wrapt==1.11.2
